<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">
    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="Back"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/ic_baseline_keyboard_backspace_24"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/NameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nameHint"
            android:inputType="text"
            android:maxLines="1"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:background="@drawable/back_smoke_round">
            <EditText
            android:id="@+id/StateTextView"
            android:background="@android:color/transparent"
            android:inputType="textMultiLine"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stateHint"/>
        </FrameLayout>
        <EditText
            android:id="@+id/AgeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ageHint"
            android:maxLines="1"
            android:inputType="number"
            />


    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/save"
        android:layout_gravity="bottom"
        android:background="@drawable/back_smoke_top"
        android:onClick="Save"/>

</FrameLayout>