<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignActivity">
    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout
                    android:id="@+id/tabSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <EditText
                            android:id="@+id/LoginTextView"
                            android:maxLines="1"
                            android:inputType="text"
                            android:hint="@string/loginHint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:id="@+id/PasswordTextView"
                            android:hint="@string/passwordHint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />


                        <Button
                            android:onClick="SignIn"
                            android:paddingLeft="30dp"
                            android:paddingRight="30dp"
                            android:text="@string/goSignIn"
                            android:layout_gravity="center"
                            android:background="@drawable/back_round_smoke"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/tabSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <EditText
                            android:id="@+id/NewLoginTextView"
                            android:maxLines="1"
                            android:inputType="text"
                            android:hint="@string/loginHint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:id="@+id/NewPasswordTextView"
                            android:hint="@string/passwordHint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />


                        <EditText
                            android:id="@+id/NewNameTextView"
                            android:maxLines="1"
                            android:inputType="text"
                            android:hint="@string/nameHint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:id="@+id/NewAgeTextView"
                            android:maxLines="1"
                            android:inputType="number"
                            android:hint="@string/ageHint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:id="@+id/NewStateTextView"
                            android:maxLines="1"
                            android:hint="@string/stateHint"
                            android:inputType="text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <Button
                            android:onClick="SignUp"
                            android:paddingLeft="30dp"
                            android:paddingRight="30dp"
                            android:text="@string/goSignUp"
                            android:layout_gravity="center"
                            android:background="@drawable/back_round_smoke"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                </FrameLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>
</FrameLayout>